<resources>
    <string name="app_name">Que Me Pongo</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_main"> </string>
    <string name="title_activity_main2"> </string>
    <string name="title_activity_outfit"> </string>

    <string name="Salir">Presiona nuevamente para salir</string>

    //despues borrar este string
    <string name="genero">Genero</string>

    <string name="txtCiudad">Ciudad</string>
    <string name="txtTemperatura">Temperatura</string>
    <string name="txtHumedad">Humedad</string>
    <string name="txtViento">Viento</string>
    <string name="txtTipo">Tipo</string>

    <string-array name="provincias">
        <item>Córdoba</item>
        <item>Buenos Aires</item>
    </string-array>



</resources>
